--- a/Coding/First.ipynb
+++ b/Coding/First.ipynb
@@ -20,8 +20,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5dd9e02c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a simple script to demonstrate the use of print statements.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"This is a simple script to demonstrate the use of print statements.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4e0597d",
    "metadata": {},
    "outputs": [],
    "source": []
