--- a/Coding/First.ipynb
+++ b/Coding/First.ipynb
@@ -38,8 +38,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b4e0597d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can use print to display messages, variables, or any other information you want to show.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"You can use print to display messages, variables, or any other information you want to show.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3feeb00c",
    "metadata": {},
    "outputs": [],
    "source": []
