--- a/Coding/MostImp.ipynb
+++ b/Coding/MostImp.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7aae9e11",
    "metadata": {},
    "outputs": [
@@ -38,10 +38,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "57b62bd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Given String is Palindrome\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input = input(\"Enter a word: \")\n",
+    "\n",
+    "# Initialize an empty string to hold the reversed version\n",
+    "reverse_string = \"\"\n",
+    "\n",
+    "# Reverse manually using a loop\n",
+    "for char in user_input:\n",
+    "    reverse_string = char + reverse_string  # Prepend each character\n",
+    "\n",
+    "# Compare the original and reversed strings\n",
+    "if user_input == reverse_string:\n",
+    "    print(\"Given String is Palindrome\")\n",
+    "else:\n",
+    "    print(\"It is not Palindrome\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "614da67a",
    "metadata": {},
    "source": [
+    "---\n",
     "2. Check if Substring is Present in a Given string"
    ]
   },
