--- a/OOP/1-Class.ipynb
+++ b/OOP/1-Class.ipynb
@@ -52,8 +52,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5948df11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class student:\n",
+    "    def __init__(self,name,rollNo,marks):\n",
+    "        self.name = name\n",
+    "        self.rollNo = rollNo\n",
+    "        self.marks = marks\n",
+    "    def study(self):\n",
+    "        print(\"My name is \" + self.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "bcabfea6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1 = student(\"Mayur\",2,90)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9e7e21bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s2 = student(\"goku\",3,99)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "12e9dffc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Mayur', 2, 90)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1.name, s1.rollNo, s1.marks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ad88061c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Mayur\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1.study()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a163a3e",
    "metadata": {},
    "outputs": [],
    "source": []
